Primeiro commit do projeto

--- a/index.html
+++ b/index.html
@@ -32,97 +32,97 @@
     </div>
 
     <div class="p-6 max-w-[1200px] mx-auto">
-        <div class="title" style="display: flex;justify-content: center;">
-            <h1 class="text-3xl font-bold text-center mb-6 text-pink-700" style="
+        <div class="title" style="display: flex; justify-content: center;margin-bottom: 20px;">
+            <h1 style="
+    font-size: clamp(1.1rem, 5vw, 2rem); /* mínimo 1.1rem, máximo 2rem */
+    white-space: nowrap;
     color: #fff;
-    padding: 10px 20px;
+    padding: 10px 24px;
     border-radius: 20px 10px 30px 10px;
     border: 1px solid #ffffff;
-    background: linear-gradient(to right, #ec4899, #e973a3);
-">Catálogo de Valores</h1>
+    background: #ec4899;
+    text-align: center;
+    display: inline-block;
+  ">
+                Catálogo de Valores
+            </h1>
         </div>
         <div id="catalogo" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6"></div>
     </div>
 
     <!-- Modal -->
-    <div id="modal" class="fixed inset-0 bg-white z-50 flex items-center justify-center flex-col p-6 hidden">
-        <button onclick="fecharModal()" class="absolute top-4 right-6 text-3xl text-gray-600">&times;</button>
-        <div id="modal-imagens" class="flex overflow-x-auto gap-4 mb-6 max-w-full px-2"></div>
-        <p class="text-sm text-gray-500 mb-2">Clique na imagem para dar Zoom</p>
-        <h2 id="modal-nome" class="text-2xl font-bold text-pink-700 mb-2"></h2>
-        <p id="modal-medidas" class="text-gray-500 mb-2 text-sm"></p>
-        <p id="modal-preco" class="text-lg font-semibold text-pink-600 mb-4"></p>
-        <a id="modal-botao" href="https://api.whatsapp.com/send/?phone=5585986500500&text=Ol%C3%A1%2C%20estava%20dando%20uma%20olhada%20no%20site%20e%20queria%20saber%20mais%20informa%C3%A7%C3%B5es.&type=phone_number&app_absent=0
+    <div id="modal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50 hidden">
+        <div id="modal-content"
+            class="bg-white rounded-2xl shadow-xl overflow-auto flex flex-col items-center p-6 transition-all duration-300 md:h-[800px] relative">
+            <button onclick="fecharModal()" class="absolute top-4 right-6 text-3xl text-gray-600">&times;</button>
+            <div id="modal-imagens" class="flex overflow-x-auto gap-4 mb-6 max-w-full px-2"></div>
+            <p class="text-sm text-gray-500 mb-2">Clique na imagem para dar Zoom</p>
+            <h2 id="modal-nome" class="text-2xl font-bold text-pink-700 mb-2"></h2>
+            <p id="modal-medidas" class="text-gray-500 mb-2 text-sm"></p>
+            <p id="modal-preco" class="text-lg font-semibold text-pink-600 mb-4"></p>
+            <a id="modal-botao" href="https://api.whatsapp.com/send/?phone=5585986500500&text=Ol%C3%A1%2C%20estava%20dando%20uma%20olhada%20no%20site%20e%20queria%20saber%20mais%20informa%C3%A7%C3%B5es.&type=phone_number&app_absent=0
 " target="_blank" class="bg-pink-500 text-white px-6 py-3 rounded-xl shadow hover:bg-pink-600 transition">
-            Faça seu pedido no WhatsApp
-        </a>
+                Faça seu pedido no WhatsApp
+            </a>
+        </div>
+
+        <div id="zoom-modal" class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50 hidden">
+            <img id="zoom-img" class="max-w-full max-h-full rounded-xl shadow-xl" />
+            <button onclick="fecharZoom()" class="absolute top-4 right-6 text-white text-3xl">&times;</button>
+        </div>
+    </div>
     </div>
 
-    <div id="zoom-modal" class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50 hidden">
-        <img id="zoom-img" class="max-w-full max-h-full rounded-xl shadow-xl" />
-        <button onclick="fecharZoom()" class="absolute top-4 right-6 text-white text-3xl">&times;</button>
-    </div>
+    <footer class="footer bg-pink-100 text-gray-800 mt-10">
+        <div class="footer-container max-w-6xl mx-auto py-10 px-4 grid grid-cols-1 md:grid-cols-3 gap-8">
 
-    <footer class="footer">
-        <div class="footer-container">
             <!-- Empresa -->
             <div class="footer-col">
-                <h2>Encantos Baby</h2>
-                <p style="display:none" >CNPJ: 00.000.000/0001-00</p>
+                <h2 class="text-lg font-bold mb-2">Encantos Baby</h2>
+                <p class="hidden">CNPJ: 00.000.000/0001-00</p>
                 <p>Fortaleza, CE - Brasil</p>
             </div>
 
             <!-- Contato -->
             <div class="footer-col">
-                <h2>Contato</h2>
+                <h2 class="text-lg font-bold mb-2">Contato</h2>
                 <p>Telefone: (85) 98650-0500</p>
                 <p>WhatsApp: (85) 98650-0500</p>
-                <p style="display: none;" Email: contato@empresa.com></p>
+                <p class="hidden">Email: contato@empresa.com</p>
             </div>
 
             <!-- Redes Sociais -->
             <div class="footer-col">
-                <h2>Redes Sociais</h2>
-                <div class="social-icons" style="
-">
-                    <a href="#" aria-label="Instagram" style="
-    background-color: #ec4899;
-    padding: 5px;
-    border-radius: 100%;
-">
-                        <!-- Instagram SVG -->
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-instagram" viewBox="0 0 16 16" style="height: 24px;padding: 0px;width: 100%;">
+                <h2 class="text-lg font-bold mb-2">Redes Sociais</h2>
+                <div class="flex gap-3">
+
+                    <!-- Instagram -->
+                    <a href="#" aria-label="Instagram" class="bg-pink-500 p-2 rounded-full text-white">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                            class="bi bi-instagram" viewBox="0 0 16 16">
                             <path
                                 d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334">
                             </path>
                         </svg>
                     </a>
 
-                    <a href="#" aria-label="WhatsApp" style="
-    background-color: #ec4899;
-    padding: 5px;
-    border-radius: 100%;
-">
-                        <!-- WhatsApp SVG -->
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-whatsapp" viewBox="0 0 16 16" style="
-    height: 24px;
-    padding: 0px;
-    width: 100%;
-">
+                    <!-- WhatsApp -->
+                    <a href="#" aria-label="WhatsApp" class="bg-pink-500 p-2 rounded-full text-white">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                            class="bi bi-whatsapp" viewBox="0 0 16 16">
                             <path
                                 d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232">
                             </path>
                         </svg>
                     </a>
+
                 </div>
             </div>
         </div>
-        </div>
 
-        <div class="footer-bottom">
-            &copy; © 2025 Encantos Baby. Todos os direitos reservados.
+        <!-- Bottom -->
+        <div class="footer-bottom text-center py-4 bg-pink-200 text-sm">
+            &copy; 2025 Encantos Baby. Todos os direitos reservados.
         </div>
     </footer>
 
