--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Catálogo de Valores</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Young+Serif&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Inter:wght@400;500;600;700&family=Young+Serif&display=swap"
         rel="stylesheet">
 </head>
 
@@ -79,7 +80,7 @@
             <!-- Empresa -->
             <div class="footer-col">
                 <h2 class="text-lg font-bold mb-2">Encantos Baby</h2>
-                <p class="hidden">CNPJ: 00.000.000/0001-00</p>
+                <p>CNPJ: 47.707.673/0001-40</p>
                 <p>Fortaleza, CE - Brasil</p>
             </div>
 
@@ -120,7 +121,6 @@
             </div>
         </div>
 
-        <!-- Bottom -->
         <div class="footer-bottom text-center py-4 bg-pink-200 text-sm">
             &copy; 2025 Encantos Baby. Todos os direitos reservados.
         </div>
