--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
                 <h2 class="text-lg font-bold mb-2">Redes Sociais</h2>
                 <div class="flex gap-3">
 
-                    <!-- Instagram -->
-                    <a href="#" aria-label="Instagram" class="bg-pink-500 p-2 rounded-full text-white">
+                    <a href="https://www.instagram.com/bolsas_encantos_baby" aria-label="Instagram" class="bg-pink-500 p-2 rounded-full text-white">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                             class="bi bi-instagram" viewBox="0 0 16 16">
                             <path
@@ -107,8 +106,7 @@
                         </svg>
                     </a>
 
-                    <!-- WhatsApp -->
-                    <a href="#" aria-label="WhatsApp" class="bg-pink-500 p-2 rounded-full text-white">
+                    <a href="https://api.whatsapp.com/send/?phone=5585986500500&text&type=phone_number&app_absent=0" aria-label="WhatsApp" class="bg-pink-500 p-2 rounded-full text-white">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                             class="bi bi-whatsapp" viewBox="0 0 16 16">
                             <path
