--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Inter:wght@400;500;600;700&family=Young+Serif&display=swap"
         rel="stylesheet">
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body class="bg-pink-100 text-brown-900">
@@ -97,7 +99,8 @@
                 <h2 class="text-lg font-bold mb-2">Redes Sociais</h2>
                 <div class="flex gap-3">
 
-                    <a href="https://www.instagram.com/bolsas_encantos_baby" aria-label="Instagram" class="bg-pink-500 p-2 rounded-full text-white">
+                    <a href="https://www.instagram.com/bolsas_encantos_baby" target="_blank" aria-label="Instagram"
+                        class="bg-pink-500 p-2 rounded-full text-white">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                             class="bi bi-instagram" viewBox="0 0 16 16">
                             <path
@@ -106,7 +109,8 @@
                         </svg>
                     </a>
 
-                    <a href="https://api.whatsapp.com/send/?phone=5585986500500&text&type=phone_number&app_absent=0" aria-label="WhatsApp" class="bg-pink-500 p-2 rounded-full text-white">
+                    <a href="https://api.whatsapp.com/send/?phone=5585986500500&text&type=phone_number&app_absent=0"
+                        target="_blank" aria-label="WhatsApp" class="bg-pink-500 p-2 rounded-full text-white">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                             class="bi bi-whatsapp" viewBox="0 0 16 16">
                             <path
