--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- Modal -->
     <div id="modal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50 hidden">
         <div id="modal-content"
-            class="bg-white rounded-2xl shadow-xl overflow-auto flex flex-col items-center p-6 transition-all duration-300 md:h-[800px] relative">
+            class="bg-white rounded-2xl shadow-xl overflow-auto flex flex-col items-center p-6 transition-all duration-300 md:h-[100%] relative">
             <button onclick="fecharModal()" class="absolute top-4 right-6 text-3xl text-gray-600">&times;</button>
             <div id="modal-imagens" class="flex overflow-x-auto gap-4 mb-6 max-w-full px-2"></div>
             <p class="text-sm text-gray-500 mb-2">Clique na imagem para dar Zoom</p>
