--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </svg>
                     </a>
 
-                    <a href="https://api.whatsapp.com/send/?phone=5585986500500&text&type=phone_number&app_absent=0"
+                    <a href="https://api.whatsapp.com/send/?phone=5585986500500&text=Ol%C3%A1%2C%20estava%20dando%20uma%20olhada%20no%20site%20e%20queria%20saber%20mais%20informa%C3%A7%C3%B5es.&type=phone_number&app_absent=0"
                         target="_blank" aria-label="WhatsApp" class="bg-pink-500 p-2 rounded-full text-white">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                             class="bi bi-whatsapp" viewBox="0 0 16 16">
