--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
 
         <div class="footer-bottom text-center py-4 bg-pink-200 text-sm">
             &copy; 2025 Encantos Baby. Todos os direitos reservados.
+            <div class="mt-1 text-xs flex justify-center items-center gap-1 text-gray-600">
+                Desenvolvido por
+                <a href="https://branx.site/" target="_blank" aria-label="Branx Agência">
+                    <img src="branxlogo.png" alt="Logo Branx Agência" class="h-4 inline">
+                </a>
+            </div>
         </div>
     </footer>
 
