--- a/index.html
+++ b/index.html
@@ -78,6 +78,90 @@
     </div>
     </div>
 
+    <div class="title" style="display: flex; justify-content: center;margin-bottom: 20px;">
+        <h1 style="
+    font-size: clamp(1.1rem, 5vw, 2rem); /* mínimo 1.1rem, máximo 2rem */
+    white-space: nowrap;
+    color: #fff;
+    padding: 10px 24px;
+    border-radius: 20px 10px 30px 10px;
+    border: 1px solid #ffffff;
+    background: #ec4899;
+    text-align: center;
+    display: inline-block;
+  ">
+            Vídeos dos Produtos
+        </h1>
+    </div>
+    <div class="carousel-container">
+        <!-- Setas -->
+        <button class="carousel-arrow arrow-left hidden" id="prevArrow">
+            <!-- Ícone esquerda -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
+                <path d="M400-80 0-480l400-400 71 71-329 329 329 329-71 71Z" />
+            </svg>
+        </button>
+        <button class="carousel-arrow arrow-right" id="nextArrow">
+            <!-- Ícone direita -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
+                <path d="m321-80-71-71 329-329-329-329 71-71 400 400L321-80Z" />
+            </svg>
+        </button>
+
+        <div class="carousel-track" id="carouselTrack">
+            <!-- Slide 1 -->
+            <div class="carousel-slide">
+                <div class="video-wrapper">
+                    <div class="video-cover" onclick="playVideo(this)"
+                        style="background: url('capavd1.jpg') no-repeat center center;border-radius: 10px;">
+                        <div class="play-button">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </div>
+                    </div>
+                    <iframe
+                        src="https://www.blogger.com/video.g?token=AD6v5dyKWhoUB3F5jpYqZniieZHrM3w6yxtFg5g-ZUK7OsgJALxjboO0ew5W81i6GhDuZr3IeHs-N5Uo73YdJ01bUan_b3Dm0F4WRvDrStkmwYco53wa6iesUQgQSAqK3hfv918_CvA"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <!-- Slide 2 -->
+            <div class="carousel-slide">
+                <div class="video-wrapper">
+                    <div class="video-cover" onclick="playVideo(this)"
+                        style="background: url('capavd2.jpg') no-repeat center center;border-radius: 10px;">
+                        <div class="play-button">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </div>
+                    </div>
+                    <iframe
+                        src="https://www.blogger.com/video.g?token=AD6v5dwA_bX1YjUOTtBmshvjJS0aLMuOeGyEEaVPl3fP5TcTqUzSKjzbMCILJBEyXX-_Yz7pA-hJNmnXfGZtGbp--_x3inZhRtUEaq11BHa0dbWMdKoI3w2aofXhYXaNvRcOZ8_IrLM"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <!-- Slide 3 -->
+            <div class="carousel-slide">
+                <div class="video-wrapper">
+                    <div class="video-cover" onclick="playVideo(this)"
+                        style="background: url('capavd3.jpg') no-repeat center center;border-radius: 10px;">
+                        <div class="play-button">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </div>
+                    </div>
+                    <iframe
+                        src="https://www.blogger.com/video.g?token=AD6v5dzajAqC88fQ9GEl9FN3tlGStO7JoMv1HBzLLnS2XiQDBqwUNxMmA_k4iG0RlGdN1jZ6OnYHeWe5xgu3aBQE6RFezsm2lHkU73tPbYxK3uKmZzj24TQdUb42wtIFkKDRPiYZ41c"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <footer class="footer bg-pink-100 text-gray-800 mt-10">
         <div class="footer-container max-w-6xl mx-auto py-10 px-4 grid grid-cols-1 md:grid-cols-3 gap-8">
 
@@ -102,7 +186,7 @@
                 <div class="flex gap-3">
 
                     <a href="https://www.instagram.com/bolsas_encantos_baby" target="_blank" aria-label="Instagram"
-                        class="bg-pink-500 p-2 rounded-full text-white">
+                        class="bg-pink-500 p-2 rounded-full hover:bg-pink-600 text-white">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                             class="bi bi-instagram" viewBox="0 0 16 16">
                             <path
@@ -112,7 +196,8 @@
                     </a>
 
                     <a href="https://api.whatsapp.com/send/?phone=5585986500500&text=Ol%C3%A1%2C%20estava%20dando%20uma%20olhada%20no%20site%20e%20queria%20saber%20mais%20informa%C3%A7%C3%B5es.&type=phone_number&app_absent=0"
-                        target="_blank" aria-label="WhatsApp" class="bg-pink-500 p-2 rounded-full text-white">
+                        target="_blank" aria-label="WhatsApp"
+                        class="bg-pink-500 p-2 rounded-full hover:bg-pink-600 text-white">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                             class="bi bi-whatsapp" viewBox="0 0 16 16">
                             <path
